--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         <div class="divider-line"></div>
       </div>
       <div class="d-flex justify-content-center fs-4 pb-5">
-        <p>Prof. De Inglés - Certif. Apreciación Cinematográfica - Desarrollador Web</p>
+        <p>Prof. De Englishki - Certif. Apreciación Cinematográfica - Desarrollador Web</p>
       </div>
     </section>
 
